--- a/src/Content.css
+++ b/src/Content.css
@@ -75,4 +75,6 @@ button {
     border-radius: 50%;
     border: solid;
     display: inline-block;
+    background-image: url('assets\headshot.jpg');
+    background-size:cover
 }
